--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,2 +1,19 @@
-<!--pages/order/order.wxml-->
-<text>pages/order/order.wxml</text>
+<view class='orderList'>
+  <view class='orderBox'>
+    <view>工种2</view>
+    <view>
+      <text class='desc'>状态： 您已接单请赶快前往工厂</text>
+    </view>
+    <view class='desc'>xxx公司</view>
+    <view class='footBox'>
+    <view class='leftBox' bindtap='callTap'>
+      <image src='/images/msg.png'></image>
+      <view>联系他们</view>
+    </view>
+    <view class='rightBox'>
+      <view class='block-btn' hover-class='block-btn-hover' bindtap='cancelTap'>取消订单</view>
+      <view bindtap='commonTap' hover-class='block-btn-hover' class='block-btn'>评价</view>
+    </view>
+    </view>
+  </view>
+</view>
