--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,1 +1,46 @@
-/* pages/order/order.wxss */
+page{
+  background-color:  rgba(215, 215, 215, 0.2);
+}
+.desc{
+  color: gray;
+  display: inline-block;
+  margin-right: 20rpx;
+  font-size: 30rpx;
+}
+.orderBox{
+  margin-top: 20rpx;
+  padding: 20rpx;
+  background-color: white;
+   height: 230rpx;
+}
+.rightBox view{
+  float: right;
+}
+.leftBox view{
+  float: left;
+  font-size: 32rpx;
+  margin-top: 4rpx;
+  margin-left: 10rpx;
+}
+.leftBox{
+  margin: 5px 30rpx;
+  
+}
+.leftBox image{
+  float: left;
+  width: 50rpx;
+  height: 50rpx;
+}
+.block-btn{
+  padding: 10rpx 20rpx;
+  border: solid 1rpx gray;
+  font-size: 25rpx;
+  margin-right: 40rpx;
+}
+.block-btn-hover{
+  background-color: gray !important;
+}
+.footBox{
+  margin-top: 30rpx;
+  border-top: solid 1rpx #d1d1d1be;
+}
