--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,19 +1,26 @@
 <view class='orderList'>
-  <view class='orderBox'>
-    <view>工种2</view>
+  <view class='orderBox' wx:for="{{orders}}" wx:key="key" id=' {{item.positionId}}'>
+    <view>{{item.type}}</view>
     <view>
-      <text class='desc'>状态： 您已接单请赶快前往工厂</text>
+      <view class='desc'>状态： {{item.status}}</view>
     </view>
-    <view class='desc'>xxx公司</view>
+    <view>
+      <view class='desc'>{{item.venderName}}</view>
+    </view>
+    <view>
+      <view class='desc'>工作时间: {{item.workTime}}</view>
+    </view>
     <view class='footBox'>
-    <view class='leftBox' bindtap='callTap'>
-      <image src='/images/msg.png'></image>
-      <view>联系他们</view>
-    </view>
-    <view class='rightBox'>
-      <view class='block-btn' hover-class='block-btn-hover' bindtap='cancelTap'>取消订单</view>
-      <view bindtap='commonTap' hover-class='block-btn-hover' class='block-btn'>评价</view>
-    </view>
+      <view class='leftBox' data-phone='{{item.venderPhone}}' bindtap='callTap'>
+        <image src='/images/msg.png'></image>
+        <view>联系他们</view>
+      </view>
+      <view class='rightBox'>
+        <view class='block-btn' hidden='{{item.cancel}}' hover-class='block-btn-hover' id='{{item.orderId}}' bindtap='cancelTap'>取消订单</view>
+          <view wx:if="{{item.notFinish}}" bindtap='finishTap' hover-class='block-btn-hover' id='{{item.venderId}}' class='block-btn'>完成订单</view>
+          <view wx:elif="{{item.notCom}}" bindtap='commonTap' hover-class='block-btn-hover' id='{{item.venderId}}' class='block-btn'>评价</view>
+          <view bindtap='moreTap' hidden='{{!item.cancel}}'  hover-class='block-btn-hover' id='{{item.venderId}}' class='block-btn'>删除订单</view>
+      </view>
     </view>
   </view>
 </view>
