--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,5 +1,6 @@
 <view class='orderList'>
-  <view class='orderBox' wx:for="{{orders}}" wx:key="key" id=' {{item.positionId}}'>
+  <view class='orderBox' wx:for="{{orders}}" wx:key="key" >
+    <view id='{{item.positionId}}' bindtap='orderTap'>
     <view>{{item.type}}</view>
     <view>
       <view class='desc'>状态： {{item.status}}</view>
@@ -10,16 +11,17 @@
     <view>
       <view class='desc'>工作时间: {{item.workTime}}</view>
     </view>
+    </view>
     <view class='footBox'>
       <view class='leftBox' data-phone='{{item.venderPhone}}' bindtap='callTap'>
         <image src='/images/msg.png'></image>
         <view>联系他们</view>
       </view>
       <view class='rightBox'>
-        <view class='block-btn' hidden='{{item.cancel}}' hover-class='block-btn-hover' id='{{item.orderId}}' bindtap='cancelTap'>取消订单</view>
-          <view wx:if="{{item.notFinish}}" bindtap='finishTap' hover-class='block-btn-hover' id='{{item.venderId}}' class='block-btn'>完成订单</view>
-          <view wx:elif="{{item.notCom}}" bindtap='commonTap' hover-class='block-btn-hover' id='{{item.venderId}}' class='block-btn'>评价</view>
-          <view bindtap='moreTap' hidden='{{!item.cancel}}'  hover-class='block-btn-hover' id='{{item.venderId}}' class='block-btn'>删除订单</view>
+        <view class='block-btn' hidden='{{item.cancel||!item.notFinish}}' hover-class='block-btn-hover' id='{{item.orderId}}' bindtap='cancelTap'>取消订单</view>
+          <view wx:if="{{item.notFinish}}" bindtap='finishTap' hover-class='block-btn-hover' id='{{item.orderId}}' class='block-btn'>完成订单</view>
+          <view wx:elif="{{item.notCom}}" bindtap='commonTap' hover-class='block-btn-hover' id='{{item.orderId}}' class='block-btn'>评价</view>
+          <view bindtap='deleteTap' hidden='{{!item.cancel}}'  hover-class='block-btn-hover' id='{{item.orderId}}' class='block-btn'>删除订单</view>
       </view>
     </view>
   </view>
