--- a/pages/editUser/editUser.wxss
+++ b/pages/editUser/editUser.wxss
@@ -6,7 +6,7 @@
   text-align: center;
 }
 .list{
-  padding:25rpx 0;
+  padding:0 30rpx;
 }
 .select{
   border: solid 1rpx #1296db !important;
@@ -15,11 +15,10 @@
 .list view{
    float: left;
   border: solid 1rpx black;
-  padding: 15rpx 50rpx;
+  padding: 5rpx 15rpx;
   margin: 10rpx;
-  font-size: 25rpx;
-  color: black;
-  border-radius: 25rpx;
+  font-size: 26rpx;
+  border-radius: 10rpx;
 }
 .list:after {
   content: ".";
@@ -28,26 +27,16 @@
   clear: both;
   visibility: hidden;
 }
-.info{
-  padding: 0 50rpx;
-}
+
 .idCard image{
   width: 100%;
   height: 300rpx;
   margin:50rpx 0; 
 }
 .idCard{
-  margin-top: 25rpx;
-  font-size: 32rpx;
+  padding-left: 20rpx;
+  padding-right: 60rpx;
 }
-.group{
-  margin-top: 25rpx;
-  font-size: 32rpx;
-  position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+.sava{
+  margin-top: 150rpx;
 }
