--- a/pages/getJob/getJob.wxss
+++ b/pages/getJob/getJob.wxss
@@ -1,24 +1,4 @@
 /* miniprogram/pages/job/job.wxss */
-.job{
-  min-height: 100%;
-}
-.header view {
-  display: inline-block;
-  text-align: center;
-  width: 50%;
-  background-color: white;
-}
-.header text{
-  color: rgb(95, 95, 95);
-  font-size: 30rpx;
-  display: inline-block;
-  padding: 10rpx 0;
-  border-bottom: solid 2px white;
-}
-.active{
-  color: black !important;
-  border-bottom: solid 2px #1296db !important;
-}
 .jobDetail{
 background-color: white;
 margin-top: 20rpx;
@@ -28,6 +8,11 @@ padding: 20rpx;
   display: inline-block;
   width: 70%;
 }
+.title{
+  margin-top: 20rpx;
+  border-left: solid 4rpx #1296db;
+  padding-left: 30rpx;
+}
 .title text{
   width: 30%;
   float: right;
@@ -35,28 +20,9 @@ padding: 20rpx;
 }
 .otherInfo text, .otherInfo view {
   margin-top: 20rpx;
-  font-size: 25rpx;
+  font-size: 30rpx;
   color: gray;
   padding-right: 20rpx;
-}
-.tags{
-  margin-top: 20rpx;
-}
-.tag{
-  float: left;
-  display: block;
-  font-size: 25rpx;
-  margin-left: 20rpx;
-  background-color: rgb(214, 214, 214);
-  border-radius: 15rpx;
-  color: rgba(146, 145, 145, 0.575);
-  padding: 10rpx;
-  margin-top: 10rpx;
-}
-.clear{
-  overflow:auto;
-  margin-bottom: 150rpx;
-  
 }
 .descTitle{
   margin-top: 20rpx;
@@ -70,7 +36,7 @@ padding: 20rpx;
 }
 .foot{
   position: fixed;
-  bottom: 0;
+  bottom: 5rpx;
   left: 0;
   width: 100%;
   background-color: white;
@@ -79,36 +45,12 @@ padding: 20rpx;
     float: left;
     width: 45%;
     margin-left: 20rpx;
-    color: #dddddd;
+    color: white;
     background: #1296db;
     border-radius: 3px;
     font-size: 30rpx;
 }
-.CompanyInfo{
-  font-size: 25rpx;
-  color: gray;
-}
-.iocnView image {
-  position: relative;
-  margin-top: -20rpx;
-  margin-right: 5rpx;
-  width: 40rpx;
-  height: 40rpx;
-  vertical-align: middle;
-  display: inline-block;
-  top: 5rpx;
-}
 
-.iocnView {
-  position: relative;
-  display: inline-block;
-}
-.iconText{
-  margin-top: 20rpx;
-}
-.lunbo{
-  margin: 20rpx 0;
-}
 .video{
   width: 100%;
   height: 250rpx;
@@ -116,9 +58,6 @@ padding: 20rpx;
 }
 .other{
   min-height: 100rpx;
-}
-.common{
-  
 }
 .commonItem{
   margin-top: 30rpx;
@@ -154,24 +93,14 @@ padding: 20rpx;
   position: relative;
   margin-top: 20rpx;
 }
-.tags{
-  margin-top: 20rpx;
-}
 
-.tags view{
-  display: inline-block;
-  font-size: 25rpx;
-  margin-left: 20rpx;
-  background-color: rgb(214, 214, 214);
-  border-radius: 15rpx;
-  color: rgba(146, 145, 145, 0.575);
-  padding: 10rpx;
-  margin-top: 10rpx;
-}
 .commonHeader:after{
   content: ".";
   display: block;
   height: 0;
   clear: both;
   visibility: hidden;
+}
+.btn-full{
+  width: 95% !important;
 }
