--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,36 +1,34 @@
-
 <view class='index'>
   <view class='header'>
     <view class='search-view'>
-      <input class='search' placeholder="搜索工种名称" />
+      <input class='search' bindconfirm="confirm" placeholder="搜索工种名称" />
       <icon type='search' size='18' class='icon-search' />
     </view>
   </view>
-  <view class="showerror" hidden='{{positions.length}}'>
-    <image src="/images/cry80.png" style="height:100rpx;width:100rpx"></image>
-    <view class="errortext">
-        暂时无法访问网络,下拉重试...
-    </view>
-</view>
+
   <view class='jobList'>
-    <view wx:for="{{positions}}" wx:key="key" wx:for-index="index"      wx:for-item="item" class='jobBox' bindtap="positionTap" id="{{item.positionId}}">
+    <view wx:for="{{positions}}" wx:key="key" wx:for-index="index" wx:for-item="item" class='jobBox' bindtap="positionTap" id="{{item.positionId}}">
       <view>
         <text class='title'>{{item.type}}</text>
         <text class='salary'>{{item.salary>=0?item.salary+item.salaryType:'见描述'}}</text>
       </view>
-
       <view>
+
         <text class='desc'>工作时间</text>
         <text class='desc'>{{item.time}}</text>
       </view>
-       <view>
+      <view>
         <text class='desc'>招工人数</text>
         <text class='desc'>{{item.hCount}}/{{item.count}}人</text>
       </view>
       <view>
-      <text class='desc'>公司名称</text>
+        <text class='desc'>公司名称</text>
         <text class='desc'>{{item.company}}</text>
       </view>
     </view>
   </view>
+  <view hidden='{{positions.length}}'>
+    <abnor type="DATA" title="没有职位信息,下拉试试"></abnor>
+  </view>
+  <i-load-more wx:if="{{positions.length}}" tip="{{tip}}" loading="{{isLoading}}"></i-load-more>
 </view>
