--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,51 @@
-.index .header {
-  background-color: #1296db;
-  padding-top: 20rpx;
-  padding-bottom: 20rpx;
+.swiper {
+  height: 400rpx;
+  width: 100%;
 }
-
-.search {
-  margin-left: 40rpx;
-  margin-right: 40rpx;
-  height: 60rpx;
-  background-color: white;
-  border-radius: 60rpx;
-  padding-left: 70rpx;
-  font-size: 30rpx;
-}
-
-.search-view {
+.carousel {
+  margin: 5rpx;
+  font-size: 14rpx;
+  overflow: hidden;
   position: relative;
+  background: #fff;
+  border-radius: 10rpx;
+}
+.swiper-image {
+  height: 100%;
+  width: 100%;
+  border-radius: 10rpx;
+}
+.slide-image {
+  height: 100%;
+  width: 95%;
+  margin: 0 20rpx;
+  border-radius: 10rpx;
+}
+.search-wrap {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 90rpx;
+  color: #fff;
+  background: #1296db;
+  border-bottom: 1rpx solid #1296db;
+}
+.search-location {
+  height: 90rpx;
+  line-height: 90rpx;
+  margin-left: 22rpx;
+  font-size: 24rpx;
+  overflow: hidden;
+}
+.search {
+  flex-grow: 1;
+  margin: 15rpx 24rpx;
+}
+.search-icon {
+  width: 44rpx;
+  height: 90rpx;
+  line-height: 90rpx;
+  margin-right: 22rpx;
 }
 
 .hidden {
@@ -43,13 +73,21 @@
   border: 1rpx solid #dddee1;
   border-radius: 5px;
 }
-
-.salary {
-  float: right;
-  margin-right: 0;
-  color: rgb(224, 135, 108);
+.images{
+  margin-top: 20rpx;
 }
-
+.images image{
+  width: 150rpx;
+  height: 150rpx;
+  margin-left: 10rpx;
+  border-radius: 5px;
+}
+.header-name{
+  padding-left: 18rpx;
+}
+.name{
+    margin-bottom: 10rpx;
+}
 .desc {
   color: gray;
   display: inline-block;
