--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -51,21 +51,16 @@
 .hidden {
   display: none;
 }
-
-.icon-search {
-  position: absolute;
-  left: 55rpx;
-  top: 23%;
-}
-
 .index {
   min-height: 100%;
 }
-
 .jobList {
   padding-bottom: 40rpx;
 }
-
+.detail{
+  color: #666666;
+  font-size: 32rpx;
+}
 .jobBox {
   margin-top: 20rpx;
   padding: 20rpx;
@@ -87,14 +82,11 @@
 }
 .name{
     margin-bottom: 10rpx;
+    color: #1296db
 }
 .desc {
   color: gray;
   display: inline-block;
   margin-right: 20rpx;
   font-size: 27rpx;
-}
-
-.footBox {
-  border-top: solid 1rpx #1296db;
 }
